@@ -58,6 +58,10 @@ ImageBufferData::ImageBufferData(const IntSize&)
 }
 
 #if USE(ACCELERATE)
+
+#ifndef TARGETING_SNOW_LEOPARD
+static bool haveVImageRoundingErrorFix() { return true; }
+#else
 // The vImage unpremultiply routine had a rounding bug before 10.6.7 <rdar://problem/8631548>
 static bool haveVImageRoundingErrorFix()
 {
@@ -65,6 +69,7 @@ static bool haveVImageRoundingErrorFix()
     static bool result = (Gestalt(gestaltSystemVersion, &version) == noErr && version > 0x1066);
     return result;
 }
+#endif // TARGETING_SNOW_LEOPARD
 
 #if USE(IOSURFACE_CANVAS_BACKING_STORE)
 static void convertScanline(void* data, size_t tileNumber, bool premultiply)
